[package]
name = "crunch_eval"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance expression evaluator"
repository = "https://github.com/Redempt/crunch_eval"
readme = "README.md"
keywords = ["eval", "expression", "expr", "evaluation", "evaluator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[dev-dependencies]
criterion = "0.4.0"
evalexpr = "8.1.0"

[[bench]]
name = "bench"
harness = false
